/cp 2009-01-30  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/33465
	* error.c (dump_expr): Handle FIX_TRUNC_EXPR and FLOAT_EXPR.

/testsuite
2009-01-30  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/33465
	* g++.dg/parse/error34.C: New.
	* g++.dg/parse/error35.C: Likewise.

/cp
2009-01-30  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/38655
	* error.c (dump_type_prefix, dump_type_suffix): Handle FIXED_POINT_TYPE.

/testsuite
2009-01-30  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/38655
	* g++.dg/cpp0x/decltype-38655.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@143790 138bc75d-0d04-0410-961f-82ee72b054a4