gcc/testsuite/g++.dg/cpp0x/decltype-38655.C
@@ -1,0 +1,4 @@
+// PR c++/38655
+// { dg-options "" }
+
+__decltype(0r)* p = 1; // { dg-error "unnamed-fixed" }
