gcc/testsuite/g++.dg/parse/error34.C
@@ -1,0 +1,8 @@
+// PR c++/33465
+
+int foo(int);
+
+void bar(double d)
+{
+  foo(d)();  // { dg-error "foo\\(\\(int\\)d\\)" }
+}
